--- a/Bustle/ToDo/Cargo.toml
+++ b/Bustle/ToDo/Cargo.toml
@@ -90,32 +90,32 @@ path = "css/9/main.rs"
 # todo
 [[bin]]
 name = "todo_1"
-path = "todo/1/main.rs"
+path = "1/main.rs"
 
 [[bin]]
 name = "todo_2"
-path = "todo/2/main.rs"
+path = "2/main.rs"
 
 [[bin]]
 name = "todo_3"
-path = "todo/3/main.rs"
+path = "3/main.rs"
 
 [[bin]]
 name = "todo_4"
-path = "todo/4/main.rs"
+path = "4/main.rs"
 
 [[bin]]
 name = "todo_5"
-path = "todo/5/main.rs"
+path = "5/main.rs"
 
 [[bin]]
 name = "todo_6"
-path = "todo/6/main.rs"
+path = "6/main.rs"
 
 [[bin]]
 name = "todo_7"
-path = "todo/7/main.rs"
+path = "7/main.rs"
 
 [[bin]]
 name = "todo_8"
-path = "todo/8/main.rs"
+path = "8/main.rs"
